# P.Web-2.8

./: get.py  models.py  pyproject.toml  qoutes.json  seeds.py
Task_2/: consumer.py  producer.py
