[tool.poetry]
name = "p-web-2-8"
version = "0.1.0"
description = ""
authors = ["Hlushchenko"]
readme = "README.md"
packages = [{include = "p"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.26.0"
black = "^22.12.0"
redis = "^4.4.2"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
